package nodes;

public class AddNodeGen {
    public static JvmMathLangNode create(JvmMathLangNode left, JvmMathLangNode right) {
        return null;
    }
}
