package nodes;

public class DivNodeGen {
    public static JvmMathLangNode create(JvmMathLangNode left, JvmMathLangNode right) {
        return null;
    }
}
