package nodes;

public class MulNodeGen {
    public static JvmMathLangNode create(JvmMathLangNode left, JvmMathLangNode right) {
        return null;
    }
}
