package nodes;

public class SubNodeGen {
    public static JvmMathLangNode create(JvmMathLangNode left, JvmMathLangNode right) {
        return null;
    }
}
